--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,40 @@
+* {
+	user-select: none;
+}
+
+html,
+body,
+#root {
+	height: 100%;
+	width: 100%;
+	cursor: default;
+}
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	font-family: "arial";
+	letter-spacing: 0.6px;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	color: white;
+}
+
+#bg {
+	z-index: -1;
+	height: 100%;
+	width: 100%;
+	position: fixed;
+	background: rgb(14, 27, 27);
+	background: linear-gradient(318deg, rgb(99, 175, 175) 0%, rgb(28, 57, 58) 100%);
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
+svg {
+	width: 100px;
+	height: 100px;
+	margin: 20px;
+	display: inline-block;
 }
